--- a/html/login-form.html
+++ b/html/login-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DrawRandomImageLogin</title>
+    <link rel="stylesheet" href="../css/style-index.css">
 </head>
 <body>
     <h1>Draw Random Image LOGIN FORM</h1> 
